--- a/templates/editors/gpx.html
+++ b/templates/editors/gpx.html
@@ -112,8 +112,8 @@
     let canvas3d = document.getElementById("canvas3d");
     let canvas_tile_ids_2d_ctx = null;
     let canvas_drag_start = null;
-    let map_darg_start = null;      // same as canvas drag start but stores the surface position // in global format
-    let last_hovered_mouse_pos = {x: 0, y: 0, depth: null};
+    let map_drag_start = null;      // same as canvas drag start but stores the surface position // in global format
+    let last_hovered_mouse_pos = null;
     let camera_state = {};  // contains all camera state for rendering
     let gl_context = null;
     let indices_render_objs = {}; // object containing render objects needed for index rendering
@@ -140,12 +140,15 @@
     const dist = (x1, y1, x2, y2) => {let x = x2 - x1, y = y2 - y1; return Math.sqrt(x * x + y * y);}
     canvas3d.addEventListener("mousedown", (e) => { 
         canvas_drag_start = { x: e.screenX, y: e.screenY, type: e.button == 0 ? "move" : e.button == 1 || e.button == 2 ? "rotate": "unknown"}; 
-        last_hovered_mouse_pos = { x: e.pageX, y: e.pageY, depth: last_hovered_mouse_pos.depth};
+        last_hovered_mouse_pos = { x: e.pageX, y: e.pageY};
         // get the depth value and use it to calculate the world position
         const clip_x = (e.pageX - canvas3d.getBoundingClientRect().x) / canvas3d.getBoundingClientRect().width * 2 - 1;
         const clip_y = (e.pageY - canvas3d.getBoundingClientRect().y) / canvas3d.getBoundingClientRect().height * 2 - 1;
-        const depth_x = 0;
-        const clip_z = 0;
+        const depth_x = Math.floor((clip_x * .5 + .5) * indices_render_objs.width + .5);
+        const depth_y = Math.floor((clip_y * .5 + .5) * indices_render_objs.height + .5);
+        const linear_z = depth_data_f32[depth_y * indices_render_objs.width + depth_x];
+        map_drag_start = clip_space_to_world(clip_x, clip_y, linear_z, camera_center, canvas3d);
+        console.log(map_drag_start.entries);
     });
     canvas3d.addEventListener("touchstart", (e) => {
                               let x = e.touches.length == 1 ? e.touches[0].screenX: .5 * e.touches[0].screenX + .5 * e.touches[1].screenX;
@@ -153,7 +156,7 @@
                               canvas_drag_start = { x: x, y: y, 
                               dist: e.touches.length == 2? dist(e.touches[0].screenX, e.touches[0].screenY, e.touches[1].screenX, e.touches[1].screenY): 0, 
                               type: e.touches.length == 1 ? "move": "rotate"};
-                              last_hovered_mouse_pos = { x: e.pageX, y: e.pageY, depth: last_hovered_mouse_pos.depth}; });
+                              last_hovered_mouse_pos = { x: e.pageX, y: e.pageY}; });
     const move_camera = (cur_move) => {
         if (canvas_drag_start) {
             let xDel = canvas_drag_start.x - cur_move.x;
@@ -213,10 +216,20 @@
     canvas3d.addEventListener("touchend", (e) => { canvas_drag_start = null; });
     canvas3d.addEventListener("touchcancel", (e) => { canvas_drag_start = null; });
     canvas3d.addEventListener("wheel", (e) => {
-        let height_multiplier = Math.max(1, .01 * (Util.wgs_84_uv_to_m(camera_center.z()) - 1100));
-        if (last_hovered_mouse_pos && last_hovered_mouse_pos.depth)
-            height_multiplier = Math.max(1e-8, last_hovered_mouse_pos.depth * 2e5);
-        camera_center.add(get_forward_dir(camera_dir, camera_pitch).mul(.1 * cam_dir_speed * height_multiplier * e.deltaY));
+        const clip_x = (e.pageX - canvas3d.getBoundingClientRect().x) / canvas3d.getBoundingClientRect().width * 2 - 1;
+        const clip_y = (e.pageY - canvas3d.getBoundingClientRect().y) / canvas3d.getBoundingClientRect().height * -2 + 1;
+        const depth_x = Math.floor((clip_x * .5 + .5) * indices_render_objs.width + .5);
+        const depth_y = Math.floor((clip_y * .5 + .5) * indices_render_objs.height + .5);
+        const linear_z = depth_data_f32[depth_y * indices_render_objs.width + depth_x];
+        map_drag_start = clip_space_to_world(clip_x, clip_y, linear_z, camera_center, canvas3d);
+        console.log(map_drag_start.entries);
+        if (isNaN(map_drag_start.entries[0])) {
+            let height_multiplier = Math.max(1, .01 * (Util.wgs_84_uv_to_m(camera_center.z()) - 1100));
+            camera_center.add(get_forward_dir(camera_dir, camera_pitch).mul(.1 * cam_dir_speed * height_multiplier * e.deltaY));
+        }
+        else {
+            camera_center.add(map_drag_start.subtract(camera_center).mul(cam_dir_speed * 20000 * -e.deltaY));
+        }
         draw_scene();
     });
     let pressed_keys = {};
@@ -545,7 +558,8 @@
 
     async function init() {
         // webgl init
-        gl_context = canvas3d.getContext('webgl2', {antialias: true}) || canvas3d.getContext('experimental-webgl2');
+        // very important to set willReadFrequently because it disables gpu acceleration
+        gl_context = canvas3d.getContext('webgl2', {antialias: true, willReadFrequently: false, powerPreference: 'high-performance' }) || canvas3d.getContext('experimental-webgl2');
         if (!gl_context) {
             alert('Unable to initialize WebGL. Your browser or machine may not support it');
             return;
@@ -726,7 +740,7 @@
                            float(((tile_id.x & 0xf) << 4) | ((tile_id.y >> 8) & 0xf)) / div,
                            float((tile_id.x >> 4) & 0xff) / div, 
                            float(tile_id.z) / div);
-            uint depth_bits = floatBitsToUint(gl_FragCoord .z);
+            uint depth_bits = floatBitsToUint(depth);   // writing linear depth to allow later for correct reconstruction with perspective and othographic projection
             out_depth = vec4(float( depth_bits         & 0xffU) / div,
                              float((depth_bits >> 8u)  & 0xffU) / div,
                              float((depth_bits >> 16u) & 0xffU) / div,
@@ -832,12 +846,12 @@
     const get_projection_mat = (camera_center, canvas) => {
         const displayWidth = canvas.width;
         const displayHeight = canvas.height;
-        const base_near = 5e-8;
-        const base_far = .1;
-        const height_multiplier = Math.max(1, .001 * (Util.wgs_84_uv_to_m(camera_center.z()) - 1100));
-        camera_perspective = PerspectiveFov(60, displayWidth / displayHeight, base_near * height_multiplier, base_far * height_multiplier);
-        const screen_size_factor = camera_center.z() * camera_center.z();
-        camera_orthographic = Orthographic(displayHeight * screen_size_factor, displayWidth * screen_size_factor, base_near * height_multiplier, base_far * height_multiplier);
+        const height_multiplier = Math.max(1, 500000 * camera_center.z());
+        const near = 1e-10 * height_multiplier;
+        const far = .001 * height_multiplier;
+        camera_perspective = PerspectiveFov(60, displayWidth / displayHeight, near , far);
+        const screen_size_factor = camera_center.z() * 5e-4;
+        camera_orthographic = Orthographic(displayHeight * screen_size_factor, displayWidth * screen_size_factor, near, far);
         const base_width = Util.m_to_wgs_84_uv(100 * Math.max(1, .0005 * (Util.wgs_84_uv_to_m(camera_center.z()) - 1700))); // base width of a detail tile given in meters
         // grid jump for triangles is done all x meters
         let grid_offset_pos = get_detail_base_pos(Pos(camera_center.x(), camera_center.y()), base_width * 0.125);
@@ -851,16 +865,20 @@
         camera_interpolation = Math.pow(document.getElementById("camera_interpolation").value, 8);
         let view_projection = camera_perspective.morph(camera_orthographic, camera_interpolation);
         view_projection.mul(view);  // inplace multiplication which corresponds to Proj * View which means the view matrix is applied before the projection
-        return [view_projection, view, base_width, grid_offset_pos];
+        return [view_projection, view, base_width, grid_offset_pos, near, far];
     }
     // Point in clip space to point in 3d space
-    const clip_space_to_world = (clip_x, clip_y, clip_z, camera_center, canvas) => {
-        const [view_projection, view, base_width, grid_offset_pos] = get_projection_mat(camera_center, canvas3d);
+    const clip_space_to_world = (clip_x, clip_y, linear_z, camera_center, canvas) => {
+        const [view_projection, view, base_width, grid_offset_pos, near, far] = get_projection_mat(camera_center, canvas3d);
         const inv_view_proj = view_projection.inverse();
-        let w_pos = view_projection.inverse() * Vec4(clip_x, clip_y, clip_z);
-        for (let i = 0; i < 4; ++i)
-            w_pos.entries[i] /= w_pos.entries[3];
-        return w_pos;
+        let start_pos = inv_view_proj.multiply(Vec4(clip_x, clip_y, -1));
+        let end_pos = inv_view_proj.multiply(Vec4(clip_x, clip_y, 1));
+        for (let i = 0; i < 4; ++i) start_pos.entries[i] /= start_pos.entries[3];
+        for (let i = 0; i < 4; ++i) end_pos.entries[i] /= end_pos.entries[3];
+        start_pos.add(end_pos.sub(start_pos).normalize().multiply(linear_z - near));
+        start_pos.entries[0] += grid_offset_pos.lat;
+        start_pos.entries[1] += grid_offset_pos.lon;
+        return start_pos;
     };
 
     // ----------------------------------------------------------------------------------------
